--- a/www/css/smartadmin-production.css
+++ b/www/css/smartadmin-production.css
@@ -15300,8 +15300,8 @@ textarea.clone {
 .smart-form *:before {
   margin: 0;
   padding: 0;
-  box-sizing: content-box;
-  -moz-box-sizing: content-box;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 .smart-form .btn {
   box-sizing: border-box;
