--- a/www/css/smartadmin-production.css
+++ b/www/css/smartadmin-production.css
@@ -3446,15 +3446,47 @@ article.sortable-grid {
     padding: 5px 0;
     box-sizing: border-box;
     margin: auto;
+    display: flex;
+    justify-content: space-between;
 }
 .control_header {
     position: relative;
     overflow: hidden;
     text-align: right;
-    width: 100%;
+    width: 26%;
+    margin-top: 20px;
+}
+section.prod_name {
+    width: 74%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+section.prod_name label {
+    text-align: left;
+    padding: 0px;
+    color: #333;
+    font-size: 13px;
+    font-weight: 400;
+}
+section.prod_name input {
+    display: block;
+    box-sizing: border-box;
+    width: 80%;
+    height: 33px;
+    padding: 8px 10px;
+    outline: none;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 0;
+    background: #fff;
+    font: 13px/16px 'Open Sans', Helvetica, Arial, sans-serif;
+    color: #000;
+    -webkit-appearance: none;
 }
 button.control_btn {
     margin-left: .4em;
+    height: 33px;
 }
 /*
 	 * HEADER
@@ -15340,7 +15372,7 @@ textarea.clone {
 }
 .smart-form fieldset {
   display: block;
-  padding: 15px 14px 5px;
+  padding: 5px 10px;
   border: none;
   background: rgba(255, 255, 255, 0.9);
   position: relative;
@@ -17656,7 +17688,7 @@ time.icon span {
   margin-top: 70px;
 }
 .page-title {
-  margin: 12px 0 0;
+  margin: 12px 0 5px;
 }
 .page-title span {
   font-size: 16px;
