добавлен выбор множественности у атрибута

--- a/www/css/smartadmin-production.css
+++ b/www/css/smartadmin-production.css
@@ -17872,13 +17872,14 @@ aside {
   background: -o-linear-gradient(left, #3a3633 93%, #322F2C 100%);
   background: -ms-linear-gradient(left, #3a3633 93%, #322F2C 100%);
   background: linear-gradient(to right, #3a3633 93%, #322F2C 100%);
+  min-height: 100%;
 }
 /*
  * HEADER GROUP
  */
 #header {
   display: block;
-  height: 53px;
+  height: 49px;
   margin: 0;
   padding: 0 13px 0 0;
   background-color: #f3f3f3;
@@ -17889,6 +17890,7 @@ aside {
   background-image: linear-gradient(to bottom, #f3f3f3, #e2e2e2);
   background-repeat: repeat-x;
   position: relative;
+  z-index: 905;
 }
 #header > div {
   display: inline-block;
@@ -18094,35 +18096,29 @@ aside {
   font-size: 17px;
   text-decoration: none !important;
 }
-
-#header > :first-child {
+#header > :first-child,
+aside {
   width: 222px;
 }
 /*
  * LEFT PANEL
  */
 #left-panel {
-    position: relative;
-    width: 20%;
-    float: left;
-    overflow-y: scroll;
-    height: 100vh;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 904;
+  padding-top: 49px;
 }
 /*
  * MAIN PANEL
  */
 #main {
-    overflow-y: scroll;
-    position: relative;
-    width: 80%;
-    height: 100vh;
-    float: right;
+  margin-left: 220px;
+  padding: 0;
+  padding-bottom: 52px;
+  /* min-height: 100%; */
 }
-#left-panel::-webkit-scrollbar, #main::-webkit-scrollbar {
-    width: 0;
-    background: transparent;
-}
-
 /*
  * RIBBON
  */
@@ -22543,12 +22539,13 @@ label:hover input[type="checkbox"][disabled].checkbox:checked + span:before {
 .page-footer {
   height: 52px;
   padding: 15px 13px 0;
+  padding-left: 233px;
   border-top: 1px solid #CECECE;
   background: #474544;
   width: 100%;
-  position: relative;
+  position: absolute;
   display: block;
-  float: right;
+  bottom: 0px;
 }
 .fixed-page-footer .page-footer {
   position: fixed;
