добавлено сохранение списка

--- a/www/css/smartadmin-production.css
+++ b/www/css/smartadmin-production.css
@@ -23999,3 +23999,9 @@ i.check-status{
   right: inherit;
   padding-left: 0;
   border:none;}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
