--- a/www/js/plugin/fileuploader/uploadfile.css
+++ b/www/js/plugin/fileuploader/uploadfile.css
@@ -139,7 +139,8 @@
 	margin:0 auto;
 	line-height: 210px;}
 .ajax-file-upload-preview-container img{
-	margin:5px;
+	max-height: 100%;
+  max-width: 100%;
 	vertical-align: middle;
 	-webkit-box-shadow: 0px 0px 10px 0 rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 0px 10px 0 rgba(0,0,0,0.75);
