--- a/www/css/smartadmin-production.css
+++ b/www/css/smartadmin-production.css
@@ -15796,8 +15796,8 @@ div.label_checkbox input[type="checkbox"] {
   flex-direction: column;
   justify-content: flex-end;
   min-height: 1px;
-  padding-right: 15px;
-  padding-left: 15px;
+  margin-right: 15px;
+  margin-left: 15px;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
 }
